--- a/.env.example
+++ b/.env.example
@@ -20,4 +20,10 @@ AUTH_DISCORD_ID=""
 AUTH_DISCORD_SECRET=""
 
 # Drizzle
-DATABASE_URL="mysql://root:password@localhost:3306/schedule-helper"
+DATABASE_URL="mysql://root:password@localhost:3306/schedule"
+
+# Google Sheets ID
+PROVIDER_CREDENTIALING_ID=""
+
+# Office Addresses JSON
+OFFICE_ADDRESSES='{"OfficeName": {"latitude": "10.1234", "longitude": "30.1234"}}'
