--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
 	},
 	"dependencies": {
 		"@auth/drizzle-adapter": "^1.7.2",
+		"@hookform/resolvers": "^5.0.1",
+		"@radix-ui/react-label": "^2.1.6",
+		"@radix-ui/react-scroll-area": "^1.2.8",
+		"@radix-ui/react-select": "^2.2.4",
+		"@radix-ui/react-separator": "^1.1.6",
+		"@radix-ui/react-slot": "^1.2.2",
 		"@t3-oss/env-nextjs": "^0.12.0",
 		"@tanstack/react-query": "^5.69.0",
 		"@trpc/client": "^11.0.0",
@@ -33,6 +39,7 @@
 		"next-auth": "5.0.0-beta.25",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.56.4",
 		"server-only": "^0.0.1",
 		"superjson": "^2.2.1",
 		"tailwind-merge": "^3.3.0",
@@ -40,13 +47,13 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
-		"@tailwindcss/postcss": "^4.0.15",
+		"@tailwindcss/postcss": "^4.1.7",
 		"@types/node": "^20.14.10",
 		"@types/react": "^19.0.0",
 		"@types/react-dom": "^19.0.0",
 		"drizzle-kit": "^0.30.5",
 		"postcss": "^8.5.3",
-		"tailwindcss": "^4.0.15",
+		"tailwindcss": "^4.1.7",
 		"tw-animate-css": "^1.3.0",
 		"typescript": "^5.8.2"
 	},
