--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@auth/drizzle-adapter": "^1.7.2",
 		"@hookform/resolvers": "^5.0.1",
 		"@radix-ui/react-label": "^2.1.6",
+		"@radix-ui/react-popover": "^1.1.14",
 		"@radix-ui/react-scroll-area": "^1.2.8",
 		"@radix-ui/react-select": "^2.2.4",
 		"@radix-ui/react-separator": "^1.1.6",
@@ -32,12 +33,14 @@
 		"@trpc/server": "^11.0.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
 		"drizzle-orm": "^0.41.0",
 		"lucide-react": "^0.511.0",
 		"mysql2": "^3.11.0",
 		"next": "^15.2.3",
 		"next-auth": "5.0.0-beta.25",
 		"react": "^19.0.0",
+		"react-day-picker": "8.10.1",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.56.4",
 		"server-only": "^0.0.1",
