--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	"dependencies": {
 		"@auth/drizzle-adapter": "^1.7.2",
 		"@hookform/resolvers": "^5.0.1",
+		"@radix-ui/react-dialog": "^1.1.14",
 		"@radix-ui/react-label": "^2.1.6",
 		"@radix-ui/react-popover": "^1.1.14",
 		"@radix-ui/react-scroll-area": "^1.2.8",
@@ -33,6 +34,7 @@
 		"@trpc/server": "^11.0.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
 		"date-fns": "^4.1.0",
 		"drizzle-orm": "^0.41.0",
 		"lucide-react": "^0.511.0",
