--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"@types/node": "^20.14.10",
 		"@types/react": "^19.0.0",
 		"@types/react-dom": "^19.0.0",
+		"biome": "^0.3.3",
 		"drizzle-kit": "^0.30.5",
 		"postcss": "^8.5.3",
 		"tailwindcss": "^4.1.7",
@@ -65,5 +66,5 @@
 	"ct3aMetadata": {
 		"initVersion": "7.39.3"
 	},
-	"packageManager": "pnpm@10.10.0"
+	"packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
 }
