--- a/.env.example
+++ b/.env.example
@@ -25,5 +25,5 @@ DATABASE_URL="mysql://root:password@localhost:3306/schedule"
 # Google Sheets ID
 PROVIDER_CREDENTIALING_ID=""
 
-# Office Addresses JSON
-OFFICE_ADDRESSES='{"OfficeName": {"latitude": "10.1234", "longitude": "30.1234"}}'
+# Office Addresses
+OFFICE_ADDRESSES="LOC:12.0087995,-8.0545544,Pretty Name;LOC2:14.8079196,-7.7155156,Pretty Name 2"
