--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,10 @@ AUTH_SECRET=""
 AUTH_DISCORD_ID=""
 AUTH_DISCORD_SECRET=""
 
+# Next Auth Google Provider
+AUTH_GOOGLE_ID=""
+AUTH_GOOGLE_SECRET=""
+
 # Drizzle
 DATABASE_URL="mysql://root:password@localhost:3306/schedule"
 
