refactor: split up python code

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,7 @@ PROVIDER_CREDENTIALING_ID=""
 
 # Office Addresses
 OFFICE_ADDRESSES="LOC:12.0087995,-8.0545544,Pretty Name;LOC2:14.8079196,-7.7155156,Pretty Name 2"
+
+# Asana API
+ASANA_TOKEN=""
+ASANA_WORKSPACE=""
