refactor: rename database

--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ AUTH_GOOGLE_ID=""
 AUTH_GOOGLE_SECRET=""
 
 # Drizzle
-DATABASE_URL="mysql://root:password@localhost:3306/schedule"
+DATABASE_URL="mysql://root:password@localhost:3306/driftwood"
 
 # Google Sheets ID
 PROVIDER_CREDENTIALING_ID=""
