--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -5,6 +5,7 @@ requires-python = ">=3.13"
 dependencies = [
     "asana>=5.1.0",
     "dotenv>=0.9.9",
+    "fastapi[standard]>=0.115.12",
     "geopy>=2.4.1",
     "google-api-python-client>=2.169.0",
     "google-auth-httplib2>=0.2.0",
@@ -12,6 +13,7 @@ dependencies = [
     "loguru>=0.7.3",
     "mysql-connector-python>=9.3.0",
     "pandas>=2.2.3",
+    "selenium>=4.33.0",
 ]
 
 [dependency-groups]
