--- a/.env.example
+++ b/.env.example
@@ -15,9 +15,7 @@
 # https://next-auth.js.org/configuration/options#secret
 AUTH_SECRET=""
 
-# Next Auth Discord Provider
-AUTH_DISCORD_ID=""
-AUTH_DISCORD_SECRET=""
+AUTH_URL=""
 
 # Next Auth Google Provider
 AUTH_GOOGLE_ID=""
@@ -26,8 +24,9 @@ AUTH_GOOGLE_SECRET=""
 # Drizzle
 DATABASE_URL="mysql://root:password@localhost:3306/driftwood"
 
-# Google Sheets ID
+# Google Sheets
 PROVIDER_CREDENTIALING_ID=""
+PROVIDER_CREDENTIALING_RANGE=""
 
 # Office Addresses
 OFFICE_ADDRESSES="LOC:12.0087995,-8.0545544,Pretty Name;LOC2:14.8079196,-7.7155156,Pretty Name 2"
