--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
 		"cmdk": "^1.1.1",
 		"date-fns": "^4.1.0",
 		"drizzle-orm": "^0.41.0",
+		"google-auth-library": "^10.0.0",
+		"googleapis": "^150.0.1",
 		"lucide-react": "^0.511.0",
 		"mysql2": "^3.11.0",
 		"next": "^15.2.3",
