--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	"dependencies": {
 		"@auth/drizzle-adapter": "^1.7.2",
 		"@hookform/resolvers": "^5.0.1",
+		"@radix-ui/react-checkbox": "^1.3.2",
 		"@radix-ui/react-dialog": "^1.1.14",
 		"@radix-ui/react-label": "^2.1.6",
 		"@radix-ui/react-popover": "^1.1.14",
