--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
     image: schedule-helper
     container_name: schedule-helper
     environment:
-     - DATABASE_URL=${DATABASE_URL}
+     - DATABASE_URL=${DOCKER_DATABASE_URL}
      - AUTH_SECRET=${AUTH_SECRET}
      - AUTH_TRUST_HOST=true
      - AUTH_GOOGLE_ID=${AUTH_GOOGLE_ID}
