--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@trpc/client": "^11.4.3",
 		"@trpc/react-query": "^11.4.3",
 		"@trpc/server": "^11.4.3",
+		"@types/sanitize-html": "^2.16.0",
 		"asana": "^3.1.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -42,6 +43,7 @@
 		"drizzle-orm": "^0.44.2",
 		"google-auth-library": "^10.1.0",
 		"googleapis": "^150.0.1",
+		"html-react-parser": "^5.2.5",
 		"lucide-react": "^0.525.0",
 		"mysql2": "^3.14.1",
 		"next": "^15.3.5",
@@ -50,6 +52,7 @@
 		"react-day-picker": "9.8.0",
 		"react-dom": "^19.1.0",
 		"react-hook-form": "^7.60.0",
+		"sanitize-html": "^2.17.0",
 		"server-only": "^0.0.1",
 		"superjson": "^2.2.2",
 		"tailwind-merge": "^3.3.1",
