feat: add downloading csvs from ta

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,9 @@ OFFICE_ADDRESSES="LOC:12.0087995,-8.0545544,Pretty Name;LOC2:14.8079196,-7.71551
 # Asana API
 ASANA_TOKEN=""
 ASANA_WORKSPACE=""
+
+# TherapyAppointment Login
+TA_USERNAME=""
+TA_PASSWORD=""
+
+EXCLUDED_TA="Jane Smith,John Doe"
