--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"@radix-ui/react-separator": "^1.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@t3-oss/env-nextjs": "^0.13.8",
-		"@tanstack/react-query": "^5.81.5",
+		"@tanstack/react-query": "^5.83.0",
 		"@trpc/client": "^11.4.3",
 		"@trpc/react-query": "^11.4.3",
 		"@trpc/server": "^11.4.3",
@@ -40,28 +40,29 @@
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
 		"date-fns": "^4.1.0",
-		"drizzle-orm": "^0.44.2",
+		"drizzle-orm": "^0.44.3",
 		"google-auth-library": "^10.1.0",
-		"googleapis": "^150.0.1",
+		"googleapis": "^152.0.0",
 		"html-react-parser": "^5.2.5",
 		"lucide-react": "^0.525.0",
-		"mysql2": "^3.14.1",
-		"next": "^15.3.5",
+		"mysql2": "^3.14.2",
+		"next": "^15.4.1",
 		"next-auth": "5.0.0-beta.25",
 		"react": "^19.1.0",
 		"react-day-picker": "9.8.0",
 		"react-dom": "^19.1.0",
 		"react-hook-form": "^7.60.0",
+		"react-simple-wysiwyg": "^3.4.0",
 		"sanitize-html": "^2.17.0",
 		"server-only": "^0.0.1",
 		"superjson": "^2.2.2",
 		"tailwind-merge": "^3.3.1",
-		"zod": "^3.25.74"
+		"zod": "^4.0.5"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "2.0.6",
+		"@biomejs/biome": "2.1.1",
 		"@tailwindcss/postcss": "^4.1.11",
-		"@types/node": "^24.0.10",
+		"@types/node": "^24.0.14",
 		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.1.6",
 		"biome": "^0.3.3",
