--- a/package.json
+++ b/package.json
@@ -1,79 +1,86 @@
 {
-	"name": "schedule-helper",
-	"version": "0.1.0",
-	"private": true,
-	"type": "module",
-	"scripts": {
-		"build": "next build",
-		"check": "biome check .",
-		"check:unsafe": "biome check --write --unsafe .",
-		"check:write": "biome check --write .",
-		"db:generate": "drizzle-kit generate",
-		"db:migrate": "drizzle-kit migrate",
-		"db:push": "drizzle-kit push",
-		"db:studio": "drizzle-kit studio",
-		"dev": "next dev --turbo",
-		"preview": "next build && next start",
-		"start": "next start",
-		"typecheck": "tsc --noEmit"
-	},
-	"dependencies": {
-		"@auth/drizzle-adapter": "^1.10.0",
-		"@hookform/resolvers": "^5.1.1",
-		"@radix-ui/react-checkbox": "^1.3.2",
-		"@radix-ui/react-dialog": "^1.1.14",
-		"@radix-ui/react-label": "^2.1.7",
-		"@radix-ui/react-popover": "^1.1.14",
-		"@radix-ui/react-radio-group": "^1.3.7",
-		"@radix-ui/react-scroll-area": "^1.2.9",
-		"@radix-ui/react-select": "^2.2.5",
-		"@radix-ui/react-separator": "^1.1.7",
-		"@radix-ui/react-slot": "^1.2.3",
-		"@t3-oss/env-nextjs": "^0.13.8",
-		"@tanstack/react-query": "^5.83.0",
-		"@trpc/client": "^11.4.3",
-		"@trpc/react-query": "^11.4.3",
-		"@trpc/server": "^11.4.3",
-		"@types/sanitize-html": "^2.16.0",
-		"asana": "^3.1.0",
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"cmdk": "^1.1.1",
-		"date-fns": "^4.1.0",
-		"drizzle-orm": "^0.44.3",
-		"google-auth-library": "^10.1.0",
-		"googleapis": "^152.0.0",
-		"html-react-parser": "^5.2.5",
-		"lucide-react": "^0.525.0",
-		"mysql2": "^3.14.2",
-		"next": "^15.4.1",
-		"next-auth": "5.0.0-beta.25",
-		"react": "^19.1.0",
-		"react-day-picker": "9.8.0",
-		"react-dom": "^19.1.0",
-		"react-hook-form": "^7.60.0",
-		"react-simple-wysiwyg": "^3.4.0",
-		"sanitize-html": "^2.17.0",
-		"server-only": "^0.0.1",
-		"superjson": "^2.2.2",
-		"tailwind-merge": "^3.3.1",
-		"zod": "^4.0.5"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "2.1.1",
-		"@tailwindcss/postcss": "^4.1.11",
-		"@types/node": "^24.0.14",
-		"@types/react": "^19.1.8",
-		"@types/react-dom": "^19.1.6",
-		"biome": "^0.3.3",
-		"drizzle-kit": "^0.31.4",
-		"postcss": "^8.5.6",
-		"tailwindcss": "^4.1.11",
-		"tw-animate-css": "^1.3.5",
-		"typescript": "^5.8.3"
-	},
-	"ct3aMetadata": {
-		"initVersion": "7.39.3"
-	},
-	"packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
+  "name": "schedule-helper",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "build": "next build",
+    "check": "biome check .",
+    "check:unsafe": "biome check --write --unsafe .",
+    "check:write": "biome check --write .",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "dev": "next dev --turbo",
+    "preview": "next build && next start",
+    "start": "next start",
+    "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@auth/drizzle-adapter": "^1.10.0",
+    "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-radio-group": "^1.3.7",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-toggle-group": "^1.1.10",
+    "@t3-oss/env-nextjs": "^0.13.8",
+    "@tanstack/react-query": "^5.83.0",
+    "@tiptap/extension-placeholder": "^3.0.7",
+    "@tiptap/react": "^3.0.7",
+    "@tiptap/starter-kit": "^3.0.7",
+    "@trpc/client": "^11.4.3",
+    "@trpc/react-query": "^11.4.3",
+    "@trpc/server": "^11.4.3",
+    "@types/lodash": "^4.17.20",
+    "@types/sanitize-html": "^2.16.0",
+    "asana": "^3.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
+    "drizzle-orm": "^0.44.3",
+    "google-auth-library": "^10.1.0",
+    "googleapis": "^153.0.0",
+    "html-react-parser": "^5.2.6",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.525.0",
+    "mysql2": "^3.14.2",
+    "next": "^15.4.2",
+    "next-auth": "5.0.0-beta.25",
+    "react": "^19.1.0",
+    "react-day-picker": "9.8.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.60.0",
+    "react-simple-wysiwyg": "^3.4.0",
+    "sanitize-html": "^2.17.0",
+    "server-only": "^0.0.1",
+    "superjson": "^2.2.2",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.0.5"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "2.1.2",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/node": "^24.0.15",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "biome": "^0.3.3",
+    "drizzle-kit": "^0.31.4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
+    "tw-animate-css": "^1.3.5",
+    "typescript": "^5.8.3"
+  },
+  "ct3aMetadata": {
+    "initVersion": "7.39.3"
+  },
+  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
 }
