--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "google-auth-library": "^10.1.0",
     "googleapis": "^153.0.0",
     "html-react-parser": "^5.2.6",
+    "ioredis": "^5.6.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
     "mysql2": "^3.14.2",
