--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,11 +1,11 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.0.6/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
   "vcs": {
     "enabled": true,
     "clientKind": "git",
     "useIgnoreFile": true
   },
-  "files": { "ignoreUnknown": false },
+  "files": { "ignoreUnknown": true },
   "formatter": { "enabled": true },
   "assist": { "actions": { "source": { "organizeImports": "on" } } },
   "linter": {
