--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,5 @@
 services:
-  schedule-helper:
+  winnonah:
     build:
       context: .
       dockerfile: Dockerfile
@@ -7,8 +7,8 @@ services:
         NEXT_PUBLIC_CLIENTVAR: "clientvar"
     restart: always
     working_dir: /app
-    image: schedule-helper
-    container_name: schedule-helper
+    image: winnonah
+    container_name: winnonah
     environment:
      - DATABASE_URL=${DOCKER_DATABASE_URL}
      - AUTH_SECRET=${AUTH_SECRET}
@@ -30,8 +30,6 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
       - MYSQL_DATABASE=${MYSQL_DATABASE}
-      - MYSQL_PASSWORD=${MYSQL_USER_PASSWORD}
-      - MYSQL_USER=${MYSQL_USER}
     ports:
       - 3306:3306
     volumes:
@@ -39,12 +37,12 @@ services:
 
   redis:
     image: redis:alpine
-    container_name: redis-schedule-helper
+    container_name: redis-winnonah
     restart: always
 
   cloudflared:
     image: cloudflare/cloudflared:latest
-    container_name: cloudflared-schedule-helper
+    container_name: cloudflared-winnonah
     command: tunnel --no-autoupdate run --token
       ${CF_TOKEN}
     restart: always
