--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"],
-      "@components/*": ["./src/app/_components/*"]
+      "@components/*": ["./src/app/_components/*"],
+      "@context/*": ["./src/app/_context/*"]
     }
   },
   "include": [
