feat: add docker builds
fix: use new env key=value syntax

fix: tag docker images

fix: use external docker compose volume

fix: include selenium in winnonah-python dockerfile

fix: permissions error in python dockerfile

fix: exclude python build when not needed

fix: headless docker

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,28 @@
-.env
+# Git and version control
+.git
+.github
+
+# Node.js deps and build artifacts
+node_modules
+.next
+npm-debug.log
+tsconfig.tsbuildinfo
+
+# Docker and orchestration files
 Dockerfile
 .dockerignore
-node_modules
-npm-debug.log
+docker-compose.yaml
+docker-compose.override.yaml
+
+# Local environment variables
+.env
+.env.*
+!.env.example
+
+# Development tooling and configs
+biome.jsonc
+drizzle.config.ts
 README.md
-.next
-.git
+
+# Separate image
+python/
