--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,10 @@ AUTH_GOOGLE_ID=""
 AUTH_GOOGLE_SECRET=""
 
 # Drizzle
+# For dev
 DATABASE_URL="mysql://root:password@localhost:3306/driftwood"
+# For prod
+DOCKER_DATABASE_URL="mysql://root:password@driftwood-db:3306/driftwood"
 
 # Google Sheets
 PROVIDER_CREDENTIALING_ID=""
@@ -33,4 +36,8 @@ TA_PASSWORD=""
 
 EXCLUDED_TA="Jane Smith,John Doe"
 
-REDIS_HOST=""
+# Redis
+# For dev
+REDIS_HOST="localhost"
+# For prod
+DOCKER_REDIS_HOST="redis-winnonah"
