--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tanstack/react-query": "^5.83.0",
+    "@tiptap/core": "^3.0.9",
     "@tiptap/extension-placeholder": "^3.0.7",
+    "@tiptap/html": "^3.0.9",
     "@tiptap/react": "^3.0.7",
     "@tiptap/starter-kit": "^3.0.7",
     "@trpc/client": "^11.4.3",
@@ -75,9 +77,11 @@
     "@types/react-dom": "^19.1.6",
     "@types/sanitize-html": "^2.16.0",
     "biome": "^0.3.3",
+    "dotenv-cli": "^10.0.0",
     "drizzle-kit": "^0.31.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
+    "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5.8.3"
   },
