feat: multi stage python docker file

--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,6 +1,7 @@
-FROM selenium/standalone-chrome
+FROM selenium/standalone-chrome:4 as base
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
+FROM base as build
 USER root
 WORKDIR /app
 
@@ -9,5 +10,8 @@ COPY pyproject.toml uv.lock ./
 RUN uv sync --frozen
 
 COPY . .
+
+FROM base
+COPY --from=build /app /app
 
 CMD ["uv", "run", "main.py"]
