fix: single stage dockerfile

--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,7 +1,6 @@
-FROM selenium/standalone-chrome:4 AS base
+FROM selenium/standalone-chrome:4
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
-FROM base AS build
 USER root
 WORKDIR /app
 
@@ -10,8 +9,5 @@ COPY pyproject.toml uv.lock ./
 RUN uv sync --frozen
 
 COPY . .
-
-FROM base
-COPY --from=build /app /app
 
 CMD ["uv", "run", "main.py"]
