--- a/package.json
+++ b/package.json
@@ -65,12 +65,14 @@
     "mysql2": "^3.14.3",
     "next": "^15.4.6",
     "next-auth": "5.0.0-beta.25",
+    "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-day-picker": "9.8.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "sanitize-html": "^2.17.0",
     "server-only": "^0.0.1",
+    "sonner": "^2.0.7",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.15"
