--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -12,10 +12,20 @@ dependencies = [
     "google-auth-httplib2>=0.2.0",
     "google-auth-oauthlib>=1.2.2",
     "loguru>=0.7.3",
+    "nameparser>=1.1.3",
+    "numpy>=2.3.1",
     "pandas>=2.2.3",
     "pymysql>=1.1.1",
     "selenium>=4.33.0",
+    "tqdm>=4.67.1",
 ]
 
 [dependency-groups]
-dev = ["icecream>=2.1.4"]
+dev = ["icecream>=2.1.4", "ruff>=0.12.8"]
+
+[tool.ruff.lint]
+select = ["D"]
+ignore = ["D100"]
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
