--- a/package.json
+++ b/package.json
@@ -20,7 +20,15 @@
   "pnpm": {
     "overrides": {
       "@auth/core": "0.40.0"
-    }
+    },
+    "onlyBuiltDependencies": [
+      "@biomejs/biome",
+      "@tailwindcss/oxide",
+      "core-js",
+      "esbuild",
+      "lefthook",
+      "sharp"
+    ]
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.10.0",
@@ -42,15 +50,15 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@t3-oss/env-nextjs": "^0.13.8",
-    "@tanstack/react-query": "^5.85.3",
-    "@tiptap/core": "^3.2.0",
-    "@tiptap/extension-placeholder": "^3.2.0",
-    "@tiptap/html": "^3.2.0",
-    "@tiptap/react": "^3.2.0",
-    "@tiptap/starter-kit": "^3.2.0",
-    "@trpc/client": "^11.4.4",
-    "@trpc/react-query": "^11.4.4",
-    "@trpc/server": "^11.4.4",
+    "@tanstack/react-query": "^5.85.5",
+    "@tiptap/core": "^3.3.0",
+    "@tiptap/extension-placeholder": "^3.3.0",
+    "@tiptap/html": "^3.3.0",
+    "@tiptap/react": "^3.3.0",
+    "@tiptap/starter-kit": "^3.3.0",
+    "@trpc/client": "^11.5.0",
+    "@trpc/react-query": "^11.5.0",
+    "@trpc/server": "^11.5.0",
     "asana": "^3.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -58,19 +66,19 @@
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.4",
     "google-auth-library": "^10.2.1",
-    "googleapis": "^156.0.0",
+    "googleapis": "^157.0.0",
     "html-react-parser": "^5.2.6",
     "ioredis": "^5.7.0",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.539.0",
+    "lucide-react": "^0.541.0",
     "mysql2": "^3.14.3",
-    "next": "^15.4.6",
+    "next": "^15.5.0",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "pino": "^9.9.0",
     "pino-pretty": "^13.1.1",
     "react": "^19.1.1",
-    "react-day-picker": "9.8.1",
+    "react-day-picker": "9.9.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "sanitize-html": "^2.17.0",
@@ -79,23 +87,26 @@
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
     "xlsx": "^0.18.5",
-    "zod": "^4.0.17"
+    "zod": "^4.1.1"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.2.0",
+    "@biomejs/biome": "2.2.2",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@tailwindcss/postcss": "^4.1.12",
     "@types/lodash": "^4.17.20",
-    "@types/node": "^24.2.1",
-    "@types/react": "^19.1.10",
+    "@types/node": "^24.3.0",
+    "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.7",
     "@types/sanitize-html": "^2.16.0",
     "biome": "^0.3.3",
     "dotenv-cli": "^10.0.0",
     "drizzle-kit": "^0.31.4",
+    "lefthook": "^1.12.3",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12",
-    "tsx": "^4.20.4",
-    "tw-animate-css": "^1.3.6",
+    "tsx": "^4.20.5",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^5.9.2"
   },
   "ct3aMetadata": {
