--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -55,6 +55,9 @@ services:
       - ASANA_TOKEN=${ASANA_TOKEN}
       - ASANA_WORKSPACE=${ASANA_WORKSPACE}
       - CENSUS_API_KEY=${CENSUS_API_KEY}
+      - OPENPHONE_API_TOKEN=${OPENPHONE_API_TOKEN}
+      - OPENPHONE_NUMBER_ID=${OPENPHONE_NUMBER_ID}
+
     volumes:
       - ./python/auth_cache:/app/auth_cache
 
