fix: docker compose python should have temp volume

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -59,6 +59,7 @@ services:
 
     volumes:
       - ./python/auth_cache:/app/auth_cache
+      - ./python/temp:/app/temp
 
   watchtower:
     image: containrrr/watchtower
