feat: put python cronjob inside of container

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -43,6 +43,7 @@ services:
   winnonah-python:
     image: ghcr.io/driftwoodeval/winnonah-python:latest
     container_name: winnonah-python
+    restart: always
     environment:
       - HEADLESS=true
       - DATABASE_URL=${DOCKER_DATABASE_URL}
@@ -56,7 +57,6 @@ services:
       - CENSUS_API_KEY=${CENSUS_API_KEY}
       - OPENPHONE_API_TOKEN=${OPENPHONE_API_TOKEN}
       - OPENPHONE_NUMBER_ID=${OPENPHONE_NUMBER_ID}
-
     volumes:
       - ./python/auth_cache:/app/auth_cache
       - ./python/temp:/app/temp
