feat: add dashboard

--- a/.env.example
+++ b/.env.example
@@ -20,8 +20,8 @@ DATABASE_URL="mysql://root:password@localhost:3306/driftwood"
 DOCKER_DATABASE_URL="mysql://root:password@driftwood-db:3306/driftwood"
 
 # Google Sheets
-PROVIDER_CREDENTIALING_ID=""
-PROVIDER_CREDENTIALING_RANGE=""
+PUNCHLIST_ID=""
+PUNCHLIST_RANGE=""
 
 # Office Addresses
 OFFICE_ADDRESSES="LOC:12.0087995,-8.0545544,Pretty Name;LOC2:14.8079196,-7.7155156,Pretty Name 2"
