--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,8 +10,8 @@ services:
       - AUTH_GOOGLE_ID=${AUTH_GOOGLE_ID}
       - AUTH_GOOGLE_SECRET=${AUTH_GOOGLE_SECRET}
       - AUTH_URL=${AUTH_URL}
-      - PROVIDER_CREDENTIALING_ID=${PROVIDER_CREDENTIALING_ID}
-      - PROVIDER_CREDENTIALING_RANGE=${PROVIDER_CREDENTIALING_RANGE}
+      - PUNCHLIST_ID=${PUNCHLIST_ID}
+      - PUNCHLIST_RANGE=${PUNCHLIST_RANGE}
       - REDIS_HOST=${DOCKER_REDIS_HOST}
       - OPENPHONE_API_TOKEN=${OPENPHONE_API_TOKEN}
       - OPENPHONE_NUMBER_ID=${OPENPHONE_NUMBER_ID}
@@ -47,8 +47,8 @@ services:
     environment:
       - HEADLESS=true
       - DATABASE_URL=${DOCKER_DATABASE_URL}
-      - PROVIDER_CREDENTIALING_ID=${PROVIDER_CREDENTIALING_ID}
-      - PROVIDER_CREDENTIALING_RANGE=${PROVIDER_CREDENTIALING_RANGE}
+      - PUNCHLIST_ID=${PUNCHLIST_ID}
+      - PUNCHLIST_RANGE=${PUNCHLIST_RANGE}
       - TA_USERNAME=${TA_USERNAME}
       - TA_PASSWORD=${TA_PASSWORD}
       - EXCLUDED_TA=${EXCLUDED_TA}
