--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.10.0",
     "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -50,32 +51,33 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@t3-oss/env-nextjs": "^0.13.8",
-    "@tanstack/react-query": "^5.85.5",
-    "@tiptap/core": "^3.3.0",
-    "@tiptap/extension-placeholder": "^3.3.0",
-    "@tiptap/html": "^3.3.0",
-    "@tiptap/react": "^3.3.0",
-    "@tiptap/starter-kit": "^3.3.0",
-    "@trpc/client": "^11.5.0",
-    "@trpc/react-query": "^11.5.0",
-    "@trpc/server": "^11.5.0",
+    "@tanstack/react-query": "^5.87.1",
+    "@tiptap/core": "^3.4.1",
+    "@tiptap/extension-placeholder": "^3.4.1",
+    "@tiptap/html": "^3.4.1",
+    "@tiptap/react": "^3.4.1",
+    "@tiptap/starter-kit": "^3.4.1",
+    "@trpc/client": "^11.5.1",
+    "@trpc/react-query": "^11.5.1",
+    "@trpc/server": "^11.5.1",
     "asana": "^3.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "drizzle-orm": "^0.44.4",
-    "google-auth-library": "^10.2.1",
-    "googleapis": "^157.0.0",
+    "drizzle-orm": "^0.44.5",
+    "google-auth-library": "^10.3.0",
+    "googleapis": "^159.0.0",
     "html-react-parser": "^5.2.6",
     "ioredis": "^5.7.0",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.541.0",
-    "mysql2": "^3.14.3",
-    "next": "^15.5.0",
+    "lucide-react": "^0.542.0",
+    "mysql2": "^3.14.5",
+    "next": "^15.5.2",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
-    "pino": "^9.9.0",
+    "parse-full-name": "^1.2.6",
+    "pino": "^9.9.4",
     "pino-pretty": "^13.1.1",
     "react": "^19.1.1",
     "react-day-picker": "9.9.0",
@@ -87,26 +89,27 @@
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
     "xlsx": "^0.18.5",
-    "zod": "^4.1.1"
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.3",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "@tailwindcss/postcss": "^4.1.12",
+    "@tailwindcss/postcss": "^4.1.13",
     "@types/lodash": "^4.17.20",
-    "@types/node": "^24.3.0",
-    "@types/react": "^19.1.11",
-    "@types/react-dom": "^19.1.7",
+    "@types/node": "^24.3.1",
+    "@types/parse-full-name": "^1.2.5",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
     "@types/sanitize-html": "^2.16.0",
     "biome": "^0.3.3",
     "dotenv-cli": "^10.0.0",
     "drizzle-kit": "^0.31.4",
-    "lefthook": "^1.12.3",
+    "lefthook": "^1.12.4",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.12",
+    "tailwindcss": "^4.1.13",
     "tsx": "^4.20.5",
-    "tw-animate-css": "^1.3.7",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5.9.2"
   },
   "ct3aMetadata": {
