--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.1.4/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.2.3/schema.json",
   "assist": {
     "actions": {
       "source": {
@@ -9,7 +9,10 @@
       }
     }
   },
-  "files": { "ignoreUnknown": true },
+  "files": {
+    "ignoreUnknown": true,
+    "includes": ["**", "!src/app/_components/ui"]
+  },
   "formatter": { "enabled": true },
   "linter": {
     "enabled": true,
