--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "sonner": "^2.0.7",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
+    "twilio": "^4.0.0",
     "vaul": "^1.1.2",
     "xlsx": "^0.18.5",
     "zod": "^4.1.8"
