--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -6,6 +6,7 @@ dependencies = [
     "cryptography>=45.0.5",
     "dotenv>=0.9.9",
     "fastapi[standard]>=0.115.12",
+    "geopandas>=1.1.1",
     "geopy>=2.4.1",
     "google-api-python-client>=2.169.0",
     "google-auth-httplib2>=0.2.0",
