fix: rework python dockerfile similar to questionnaires

--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,19 +1,10 @@
-FROM selenium/standalone-chrome:4
-COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
+FROM ghcr.io/astral-sh/uv:python3.13-bookworm-slim
 
-USER root
-
-RUN apt-get update && apt-get install -y \
-    gcc \
-    g++ \
-    make \
-    libffi-dev \
-    libgdal-dev \
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    chromium \
+    chromium-driver \
+    curl \
     && rm -rf /var/lib/apt/lists/*
-
-WORKDIR /app
-
-COPY --chmod=555 ./docker/scripts/*.sh .
 
 ENV SUPERCRONIC_URL=https://github.com/aptible/supercronic/releases/download/v0.2.34/supercronic-linux-amd64 \
     SUPERCRONIC_SHA1SUM=e8631edc1775000d119b70fd40339a7238eece14 \
@@ -25,12 +16,18 @@ RUN curl -fsSLO "$SUPERCRONIC_URL" \
     && mv "$SUPERCRONIC" "/usr/local/bin/${SUPERCRONIC}" \
     && ln -s "/usr/local/bin/${SUPERCRONIC}" /usr/local/bin/supercronic
 
+WORKDIR /app
+
 COPY pyproject.toml uv.lock ./
 RUN uv sync --frozen
 
+COPY --chmod=555 ./docker/scripts/*.sh .
 COPY . .
 
-ENV TZ=America/New_York \
-    CRON_SCHEDULE="0 22 * * *"
+ENV CHROME_BIN=/usr/bin/chromium \
+    CHROMEDRIVER_PATH=/usr/bin/chromedriver \
+    TZ=America/New_York \
+    CRON_SCHEDULE="0 22 * * *" \
+    PYTHONUNBUFFERED=1
 
 ENTRYPOINT ["/app/entrypoint-winnonah-python.sh"]
