--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -3,6 +3,7 @@ name = "winnonah-python"
 version = "0.1.0"
 requires-python = ">=3.13"
 dependencies = [
+    "cryptography>=46.0.3",
     "dotenv>=0.9.9",
     "geopandas>=1.1.1",
     "geopy>=2.4.1",
