feat: note history display

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "diff": "^8.0.2",
     "drizzle-orm": "^0.44.5",
     "google-auth-library": "^10.3.0",
     "googleapis": "^159.0.0",
