--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	},
 	"dependencies": {
 		"@auth/drizzle-adapter": "^1.11.1",
+		"@googleapis/calendar": "^14.2.0",
 		"@googleapis/drive": "^20.0.0",
 		"@googleapis/sheets": "^13.0.1",
 		"@hookform/resolvers": "^5.2.2",
@@ -51,6 +52,7 @@
 		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-separator": "^1.1.8",
 		"@radix-ui/react-slot": "^1.2.4",
+		"@radix-ui/react-switch": "^1.2.6",
 		"@radix-ui/react-tabs": "^1.1.13",
 		"@radix-ui/react-toggle": "^1.1.10",
 		"@radix-ui/react-toggle-group": "^1.1.11",
