Revert "chore: update"
This reverts commit 2b377a13c9b75349c9736a6fb800097b9aea77e3.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,12 @@
     "noEmit": true,
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "jsx": "react-jsx",
-    "plugins": [{ "name": "next" }],
+    "jsx": "preserve",
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
     "incremental": true,
     /* Path Aliases */
     "baseUrl": ".",
