--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -67,3 +67,15 @@ jobs:
           labels: ${{ steps.meta-python.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+      - uses: actions/delete-package-versions@v5
+        with:
+          package-name: "winnonah"
+          package-type: "container"
+          min-versions-to-keep: 5
+
+      - uses: actions/delete-package-versions@v5
+        with:
+          package-name: "winnonah-python"
+          package-type: "container"
+          min-versions-to-keep: 5
