--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,8 +13,49 @@ permissions:
   packages: write
 
 jobs:
-  build-and-push-image:
+  check-changes:
     runs-on: ubuntu-latest
+    outputs:
+      build_node: ${{ steps.check_node_changes.outputs.build_triggered }}
+      build_python: ${{ steps.check_python_changes.outputs.build_triggered }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v44
+
+      - name: Check for node changes
+        id: check_node_changes
+        run: |
+          echo "build_triggered=false" >> $GITHUB_OUTPUT
+          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+            if [[ ! "$file" == python/* ]]; then
+              echo "Detected change in '$file', triggering Node.js build."
+              echo "build_triggered=true" >> $GITHUB_OUTPUT
+              break
+            fi
+          done
+
+      - name: Check for python changes
+        id: check_python_changes
+        run: |
+          echo "build_triggered=false" >> $GITHUB_OUTPUT
+          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+            if [[ "$file" == python/* ]]; then
+              echo "Detected change in '$file', triggering Python build."
+              echo "build_triggered=true" >> $GITHUB_OUTPUT
+              break
+            fi
+          done
+
+  build-node:
+    runs-on: ubuntu-latest
+    needs: check-changes
+    if: needs.check-changes.outputs.build_node == 'true'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -48,6 +89,24 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+  build-python:
+    runs-on: ubuntu-latest
+    needs: check-changes
+    if: needs.check-changes.outputs.build_python == 'true'
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log into registry ${{ env.REGISTRY }}
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Extract metadata for Python image
         id: meta-python
         uses: docker/metadata-action@v5
@@ -68,6 +127,11 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+  delete-old-packages:
+    runs-on: ubuntu-latest
+    needs: [build-node, build-python]
+    if: always() && (needs.build-node.result == 'success' || needs.build-python.result == 'success')
+    steps:
       - uses: actions/delete-package-versions@v5
         with:
           package-name: "winnonah"
