--- a/python/.dockerignore
+++ b/python/.dockerignore
@@ -7,6 +7,9 @@ __pycache__/
 config/
 logs/
 put/
+shapefiles/
+auth_cache/
+temp/
 
 # Docker and environment files are not needed inside the image
 Dockerfile
