--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,7 @@ services:
       - REDIS_HOST=${DOCKER_REDIS_HOST}
       - OPENPHONE_API_TOKEN=${OPENPHONE_API_TOKEN}
       - OPENPHONE_NUMBER_ID=${OPENPHONE_NUMBER_ID}
+      - API_KEY=${API_KEY}
     volumes:
       - ./logs:/app/logs
 
