--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,5 +42,5 @@
 		".next/types/**/*.ts",
 		".next/dev/types/**/*.ts"
 	],
-	"exclude": ["node_modules", "scripts"]
+	"exclude": ["node_modules", "scripts", "drizzle"]
 }
