--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
 	},
 	"pnpm": {
 		"overrides": {
-			"@auth/core": "0.40.0"
+			"@auth/core": "0.40.0",
+			"@types/react": "19.2.8",
+			"@types/react-dom": "19.2.3"
 		},
 		"onlyBuiltDependencies": [
 			"@biomejs/biome",
@@ -75,14 +77,14 @@
 		"lodash": "^4.17.21",
 		"lucide-react": "^0.562.0",
 		"mysql2": "^3.16.1",
-		"next": "^15.5.9",
+		"next": "16.1.4",
 		"next-auth": "5.0.0-beta.30",
 		"next-themes": "^0.4.6",
 		"pino": "^9.14.0",
 		"pino-pretty": "^13.1.3",
-		"react": "^19.2.3",
+		"react": "19.2.3",
 		"react-day-picker": "9.13.0",
-		"react-dom": "^19.2.3",
+		"react-dom": "19.2.3",
 		"react-hook-form": "^7.71.1",
 		"sanitize-html": "^2.17.0",
 		"server-only": "^0.0.1",
@@ -99,8 +101,8 @@
 		"@tailwindcss/postcss": "^4.1.18",
 		"@types/lodash": "^4.17.23",
 		"@types/node": "^24.10.9",
-		"@types/react": "^19.2.8",
-		"@types/react-dom": "^19.2.3",
+		"@types/react": "19.2.8",
+		"@types/react-dom": "19.2.3",
 		"@types/sanitize-html": "^2.16.0",
 		"dotenv-cli": "^10.0.0",
 		"drizzle-kit": "^0.31.8",
