--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
 	},
 	"dependencies": {
 		"@auth/drizzle-adapter": "^1.11.1",
+		"@googleapis/drive": "^20.0.0",
+		"@googleapis/sheets": "^13.0.1",
 		"@hookform/resolvers": "^5.2.2",
 		"@radix-ui/react-accordion": "^1.2.12",
 		"@radix-ui/react-alert-dialog": "^1.1.15",
@@ -71,7 +73,6 @@
 		"drizzle-orm": "^0.44.7",
 		"fastest-levenshtein": "^1.0.16",
 		"google-auth-library": "^10.5.0",
-		"googleapis": "^159.0.0",
 		"html-react-parser": "^5.2.11",
 		"ioredis": "^5.9.2",
 		"lodash": "^4.17.21",
