--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,9 @@ AUTH_URL=""
 AUTH_GOOGLE_ID=""
 AUTH_GOOGLE_SECRET=""
 
+NEXT_PUBLIC_APP_TITLE="Winnonah"
+NEXT_PUBLIC_APP_DOMAIN="winnonah.xyz"
+
 # Drizzle
 # For dev
 DATABASE_URL="mysql://root:password@localhost:3306/driftwood"
