--- a/package.json
+++ b/package.json
@@ -87,6 +87,8 @@
 		"react-day-picker": "9.13.0",
 		"react-dom": "19.2.3",
 		"react-hook-form": "^7.71.1",
+		"react-markdown": "^10.1.0",
+		"remark-gfm": "^4.0.1",
 		"sanitize-html": "^2.17.0",
 		"server-only": "^0.0.1",
 		"sonner": "^2.0.7",
@@ -100,6 +102,7 @@
 		"@commitlint/cli": "^19.8.1",
 		"@commitlint/config-conventional": "^19.8.1",
 		"@tailwindcss/postcss": "^4.1.18",
+		"@tailwindcss/typography": "^0.5.19",
 		"@types/lodash": "^4.17.23",
 		"@types/node": "^24.10.9",
 		"@types/react": "19.2.8",
