feat: move to new url

--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,8 @@ AUTH_URL=""
 AUTH_GOOGLE_ID=""
 AUTH_GOOGLE_SECRET=""
 
-NEXT_PUBLIC_APP_TITLE="Winnonah"
-NEXT_PUBLIC_APP_DOMAIN="winnonah.xyz"
+NEXT_PUBLIC_APP_TITLE="Driftwood"
+NEXT_PUBLIC_APP_DOMAIN="emr.driftwoodeval.com"
 
 # Drizzle
 # For dev
