--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -3,25 +3,28 @@ name = "winnonah-python"
 version = "0.1.0"
 requires-python = ">=3.14"
 dependencies = [
-    "cryptography>=46.0.3",
-    "dotenv>=0.9.9",
-    "geopandas>=1.1.1",
-    "geopy>=2.4.1",
-    "google-api-python-client>=2.169.0",
-    "google-auth-httplib2>=0.2.0",
-    "google-auth-oauthlib>=1.2.2",
-    "loguru>=0.7.3",
-    "nameparser>=1.1.3",
-    "numpy>=2.3.1",
-    "pandas>=2.2.3",
-    "pymysql>=1.1.1",
-    "selenium>=4.33.0",
-    "tqdm>=4.67.1",
-    "typer>=0.21.1",
+  "cryptography>=46.0.3",
+  "dotenv>=0.9.9",
+  "geopandas>=1.1.1",
+  "geopy>=2.4.1",
+  "google-api-python-client>=2.169.0",
+  "google-auth-httplib2>=0.2.0",
+  "google-auth-oauthlib>=1.2.2",
+  "loguru>=0.7.3",
+  "nameparser>=1.1.3",
+  "numpy>=2.3.1",
+  "pandas>=2.2.3",
+  "pymysql>=1.1.1",
+  "selenium>=4.33.0",
+  "tqdm>=4.67.1",
+  "typer>=0.21.1",
 ]
 
 [dependency-groups]
-dev = ["icecream>=2.1.4", "ruff>=0.12.8"]
+dev = [
+  "icecream>=2.1.4",
+  "ruff>=0.12.8",
+]
 
 [tool.ruff.lint]
 select = ["UP", "FURB"]
