feat: add endpoint and popup for latest screenshot of each questionnaire

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,7 @@ services:
 
     volumes:
       - ./logs:/app/logs
+      - ../qs/logs/screenshots:/app/q-screenshots
 
   driftwood-db:
     image: mysql
