--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
 		"next-auth": "5.0.0-beta.30",
 		"next-themes": "^0.4.6",
 		"pino": "^10.3.1",
+		"pino-abstract-transport": "^3.0.0",
 		"pino-pretty": "^13.1.3",
 		"react": "19.2.4",
 		"react-day-picker": "9.13.0",
